--- a/ms_classe/src/main/resources/application.properties
+++ b/ms_classe/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-server.port=8083
-# Configurer l'endpoint GraphQL
-graphql.servlet.mapping=/graphql
-graphql.servlet.enabled=true
-
-spring.application.name=ms_classe
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_etudiant
+
 spring.datasource.username=postgres
 spring.datasource.password=Passer@1
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -15,3 +10,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8767/eureka/
 eureka.instance.hostname=localhost
+spring.graphql.graphiql.enabled=true
