--- a/ms_classe/pom.xml
+++ b/ms_classe/pom.xml
@@ -36,6 +36,11 @@
 			<version>1.6.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.graphql</groupId>
+			<artifactId>spring-graphql-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.graphql-java-kickstart</groupId>
 			<artifactId>graphql-spring-boot-starter</artifactId>
 			<version>15.0.0</version>
