--- a/ms_classe/src/main/resources/application.properties
+++ b/ms_classe/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+server.port=8083
+spring.application.name=ms_classe
+spring.graphql.graphiql.enabled=true
+spring.graphql.schema-inspection.enabled=false
+spring.graphql.path=/graphql
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_etudiant
-
 spring.datasource.username=postgres
 spring.datasource.password=Passer@1
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -7,7 +11,4 @@ spring.datasource.platform=postgresql
 # Hibernate Configuration (optional, if using Hibernate)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8767/eureka/
-eureka.instance.hostname=localhost
-spring.graphql.graphiql.enabled=true
+spring.graphql.cors.allowed-origins=http://localhost:3000
