--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "soap": "^1.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
